# pass_checker

./: README.md  pyproject.toml
src/: commands.py  core.py  main.py
