[tool.poetry]
name = "pass_checker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = { extras = ["http2"], version = "^0.23.0" }
rich = { extras = ["all"], version = "^12.6.0" }
typer = {extras = ["all"], version = "^0.6.1"}
pyprof2calltree = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
